<resources>
    <string name="app_name">橙云生活</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="system_error">系统错误</string>
    <string name="Suspend_opening">暂未开放</string>
    <string name="service_error">服务器错误，请稍后重试</string>
    <string name="phone_error">手机号错误</string>
    <string name="code_error">验证码错误</string>
    <string name="observe_error">未接受版权声明和隐私协议</string>

    <string name="regitster_one">恭喜您，注册成功</string>
    <string name="regitster_two">现在您可以给【橙云生活】设置登录密码</string>
    <string name="regitster_three">或点击右上角【跳过】按键\n下次登录时您可以使用验证码登录\n在【我的】页面中可设置和找回密码</string>
    <string name="psd_error">密码格式不正确</string>
    <string name="rtpsd_error">密码不一致，请检查后输入</string>


    <string name="login_suceesee">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="register_success">注册成功</string>

    <string name="network_off">请检查网络设置</string>
    <string name="user_already_exists">用户已经存在</string>
    <string name="without_permission">没有权限</string>
    <string name="register_failed">注册失败</string>
    <string name="illegal_user_name">用户名不合法</string>


    <string name="my_manager">资产管理</string>
    <string name="my_myattention">我的关注</string>
    <string name="my_help">帮助</string>
    <string name="my_settting">设置</string>
    <string name="my_check_update">版本与更新</string>
    <string name="my_updated">已是最新版本</string>


    <string name="setting_restpsd">重设密码</string>
    <string name="setting_information">消息设置</string>
    <string name="setting_neighbour">邻里设置</string>
    <string name="setting_logout">注销</string>
    <string name="input_null">输入不能为空</string>
    <string name="input_error">请确认输入是否正确</string>
    <string name="creat_group_null">您还没有选择好友</string>
    <string name="change_success">修改成功</string>
    <string name="chat_group_owenr_error">对不起，您不是群主</string>


    <string name="chat_group_change_error">群信息修改失败</string>
    <string name="chat_group_change_success">群信息修改成功</string>
    <string name="chat_group_invite_success">群组添加人员成功</string>
    <string name="chat_group_invite_failed">群组添加人员失败</string>

    <string name="creat_feed_choosetopic">请选择话题</string>

</resources>
