<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_home_manager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/my_manmager" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/my_manager"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView style="@style/MyMenu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/my_care" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/my_myattention"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView style="@style/MyMenu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/my_help" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/my_help"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView style="@style/MyMenu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_settting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/my_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/my_settting"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView style="@style/MyMenu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/my_update" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/my_check_update"
                android:textColor="@color/white" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="已经是最新版本"
            android:textSize="@dimen/text_s"
            android:layout_marginRight="20dp"
            android:textColor="@color/text_l" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V 1.0.1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="88dp"
        android:textSize="@dimen/text_xs"
        android:textColor="@color/text_l"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/text_xs"
        android:layout_marginBottom="40dp"
        android:textColor="@color/text_h"
        android:text="版权协议"/>
</LinearLayout>