<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="44dp"
            android:layout_height="50dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="设置"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xh" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_reset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/my_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/set_restpsd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/setting_restpsd"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView style="@style/MyMenu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/my_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/set_information" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/setting_information"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView style="@style/MyMenu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/my_menu"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/set_near" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/setting_neighbour"
                android:textColor="@color/white" />

        </LinearLayout>


        <ImageView style="@style/MyMenu" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/cut_line"/>
    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/my_menu"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/set_lougout"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="@color/text_m"
            android:text="登出橙生活"/>
    </LinearLayout>

</LinearLayout>