<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/cut_line"
            android:layout_alignParentBottom="true"/>
        <ImageView
            android:layout_width="44dp"
            android:layout_height="50dp"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="@dimen/text_xh" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingRight="10dp"
            android:text="跳过"
            android:textColor="@color/theme" />



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#ff000000"
            android:shadowDx="1"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="橙帐号"
            android:textColor="@color/theme"
            android:textSize="@dimen/text_h" />


        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:shadowColor="#ff000000"
            android:shadowDx="1"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="123456789"
            android:textColor="@color/white"
            android:textSize="@dimen/text_h" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/regitster_one"
        android:textColor="@color/hint_one"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="18dp"
        android:text="@string/regitster_two"
        android:textColor="@color/hint_one" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="14sp"
        android:lineSpacingExtra="4dp"
        android:text="@string/regitster_three"
        android:textColor="@color/hint_one" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_cl_line_tran"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input">

            <EditText
                android:id="@+id/ev_psd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textPassword"
                android:digits=".0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="输入密码"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_s"
                android:textSize="@dimen/text_s" />


            <ImageView
                android:layout_width="18dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/login_phone" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/cut_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input">

            <EditText
                android:id="@+id/ev_rtpsd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:inputType="textPassword"
                android:digits=".0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="确认密码"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_s"
                android:textSize="@dimen/text_s" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/login_psd" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_cl_theme"
        android:text="设置密码"
        android:textColor="@color/white" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="提示:为了您的账户安全,密码不可与帐号一致"
            android:textColor="@color/text_h"
            android:textSize="@dimen/text_xs" />
    </RelativeLayout>
</LinearLayout>